<resources>
    <string name="app_name">App Lock</string>
    <string name="setting_title">App Lock Setting</string>
    <string name="lock_title">LockBooster</string>

    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_app_list">AppList</string>
    <string name="title_activity_lock">Lock</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_set_password">SetPassword</string>

    <string name="selected">Have Selected</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="go_on">Continue</string>
    <string name="confirm">Confirm</string>
    <string name="alert">Alert</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="retry">Retry</string>


    <string-array name="setting_pin">
        <item>Change password</item>
        <item>Vibrate on touch</item>
    </string-array>

    <string name="change_password">Change password</string>
    <string name="vibrate_option">Vibrate on touch</string>
    <string name="visible_option">Make pattern visible</string>
    <string name="lock_once">Lock apps after the device is locked</string>
    <string name="lock_every_time">Lock every time you launch an app</string>
    <string name="set_password_tip">Input your unlock password</string>
    <string name="app_tip">Please choose the apps you want to lock</string>
    <string name="use_pattern_tip">Use pattern</string>
    <string name="use_pin_tip">Use passcode</string>
    <string name="pin_tip">Draw your unlock passcode</string>
    <string name="pattern_tip">Draw your unlock pattern</string>
    <string name="confirm_pin">Confirm your unlock passcode</string>
    <string name="confirm_pattern">Confirm your unlock pattern</string>
    <string name="pin_error">Your PIN didn\'t match, please try again</string>
    <string name="pattern_error">Your pattern didn\'t match, please try again</string>
    <string name="give_up_tip">Do you really give up on me?</string>
    <string name="pin_more">Cannot more than 4 numbers.</string>
    <string name="pattern_less">Connect at least 4 dots. Try again</string>
    <string name="sorry">Sorry, try again</string>
    <string name="lock_option">Lock option</string>

    <string-array name="packageName">
        <item>com.facebook.katana</item>
        <item>com.skype.raider</item>
        <item>com.twitter.android</item>
        <item>com.instagram.android</item>
        <item>jp.naver.line.android</item>
        <item>com.facebook.orca</item>
        <item>com.google.android.youtube</item>
        <item>com.imo.android.imoim</item>
        <item>com.ebay.mobile</item>
        <item>com.yahoo.mobile.client.android.yahoo</item>
        <item>com.imdb.mobile</item>
        <item>com.viber.voip</item>
        <item>com.whatsapp</item>
        <item>com.android.chrome</item>
        <item>com.infraware.office.link</item>
        <item>com.spotify.music</item>
        <item>com.commsource.beautyplus</item>
        <item>media.music.musicplayer</item>
        <item>com.google.android.apps.maps</item>
        <item>com.viki.android</item>
    </string-array>
    <string name="title_activity_ads">ads</string>


</resources>
