<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/alert"
        android:textColor="#716f6a"
        android:textSize="25sp"
        android:typeface="monospace" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:gravity="center"
        android:paddingBottom="24.5dp"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:paddingTop="24.5dp"
        android:text="@string/give_up_tip"
        android:textSize="@dimen/text_size_primary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_background"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/no"
            android:textColor="#ff9d1d" />

        <TextView
            android:id="@+id/dialog_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_background"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/yes" />
    </LinearLayout>

</LinearLayout>