<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="com.dotc.applocker.view.activity.SetPassword">

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_set"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginEnd="22dp"
            android:background="@drawable/cancel_background_disable"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_secondary" />

        <TextView
            android:id="@+id/continue_set"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginStart="22dp"
            android:background="@drawable/continue_background_disable"
            android:gravity="center"
            android:text="@string/go_on"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_secondary" />

    </LinearLayout>

    <TextView
        android:id="@+id/set_password_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_layout"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/use_pin_tip"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_secondary" />

    <TextView
        android:id="@+id/password_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_secondary" />

    <FrameLayout
        android:id="@+id/set_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/set_password_tip"
        android:layout_below="@id/password_tip" />


</RelativeLayout>
