<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sample.applocker.view.activity.Setting">

    <include layout="@layout/toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="@dimen/default_padding"
        android:layout_marginStart="@dimen/default_padding"
        android:background="@drawable/divider" />

    <TextView
        android:id="@+id/item_arrow"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableEnd="@mipmap/icon_arrow"
        android:padding="@dimen/default_padding"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_tertiary" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="@dimen/default_padding"
        android:layout_marginStart="@dimen/default_padding"
        android:background="@drawable/divider" />

    <RelativeLayout
        android:id="@+id/item_vibrate_check"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <CheckBox
            android:id="@+id/item_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:button="@drawable/check_background" />

        <TextView
            android:id="@+id/item_vibrate_check_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/vibrate_option"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_tertiary" />
    </RelativeLayout>


    <View
        android:id="@+id/hint_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="@dimen/default_padding"
        android:layout_marginStart="@dimen/default_padding"
        android:background="@drawable/divider" />

    <RelativeLayout
        android:id="@+id/item_visible_check"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <CheckBox
            android:id="@+id/item_visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:button="@drawable/check_background" />

        <TextView
            android:id="@+id/item_visible_check_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/visible_option"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_tertiary" />
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="@dimen/default_padding"
        android:layout_marginStart="@dimen/default_padding"
        android:background="@drawable/divider" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:paddingEnd="@dimen/default_padding"
        android:paddingStart="@dimen/default_padding"
        android:text="@string/lock_option"
        android:textColor="#6effffff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="@dimen/default_padding"
        android:layout_marginStart="@dimen/default_padding"
        android:background="@drawable/divider" />

    <RelativeLayout
        android:id="@+id/item_once_check"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <com.sample.applocker.view.widget.CheckButton
            android:id="@+id/item_once_check_box"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/item_once_check_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/lock_once"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_tertiary" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="@dimen/default_padding"
        android:layout_marginStart="@dimen/default_padding"
        android:background="@drawable/divider" />

    <RelativeLayout
        android:id="@+id/item_every_check"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <com.sample.applocker.view.widget.CheckButton
            android:id="@+id/item_every_check_box"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="10dp" />

        <TextView
            android:id="@+id/item_every_check_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/lock_every_time"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_tertiary" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="@dimen/default_padding"
        android:layout_marginStart="@dimen/default_padding"
        android:background="@drawable/divider" />
</LinearLayout>
